# aztec-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCS_DRIFT.md  E2E_TEST_COVERAGE.md  EMBEDDED_PXE_PLAN.md  GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LICENSE  PLAN.md  PROVE_PRIVATE_NOTE_TX_OPTIMIZATION_PLAN.md  PXE_BENCHMARKS.md  README.md  SPEC.md  STEP_4_AUTHWIT_PLAN.md  clippy.toml
.cargo/: config.toml
.clippy-strict/: clippy.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/account/: Cargo.toml
crates/account/src/: account.rs  authorization.rs  lib.rs  meta_payment.rs  schnorr.rs  signerless.rs  single_account_provider.rs
crates/account/src/entrypoint/: account_entrypoint.rs  encoding.rs  mod.rs  multi_call_entrypoint.rs
crates/contract/: Cargo.toml
crates/contract/src/: authwit.rs  contract.rs  deployment.rs  events.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: abi.rs  constants.rs  fee.rs  grumpkin.rs  hash.rs  kernel_types.rs  lib.rs  tx.rs  types.rs  validation.rs
crates/core/src/abi/: buffer.rs  checkers.rs  decoder.rs  encoder.rs  mod.rs  selectors.rs  storage_layout.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: address.rs  keys.rs  lib.rs  pedersen.rs  schnorr.rs  sha512.rs
crates/ethereum/: Cargo.toml
crates/ethereum/src/: cross_chain.rs  l1_client.rs  lib.rs  messaging.rs
crates/fee/: Cargo.toml
crates/fee/src/: fee_juice_with_claim.rs  fee_payment_method.rs  lib.rs  native.rs  sponsored.rs  types.rs
crates/node-client/: Cargo.toml
crates/node-client/src/: lib.rs  node.rs
crates/pxe/: Cargo.toml
crates/pxe-client/: Cargo.toml
crates/pxe-client/src/: lib.rs  pxe.rs
crates/pxe/src/: embedded_pxe.rs  lib.rs
crates/pxe/src/execution/: acvm_executor.rs  execution_result.rs  field_conversion.rs  mod.rs  oracle.rs  pick_notes.rs  utility_oracle.rs
crates/pxe/src/kernel/: execution_prover.rs  mod.rs  oracle.rs  prover.rs  simulated.rs
crates/pxe/src/stores/: address_store.rs  anchor_block_store.rs  capsule_store.rs  contract_store.rs  key_store.rs  kv.rs  mod.rs  note_store.rs  private_event_store.rs  recipient_tagging_store.rs  sender_store.rs  sender_tagging_store.rs  sled_store.rs
crates/pxe/src/sync/: block_state_synchronizer.rs  block_sync.rs  contract_sync.rs  event_filter.rs  event_service.rs  log_service.rs  mod.rs  note_service.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs  rpc.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: account_provider.rs  base_wallet.rs  lib.rs  wallet.rs
docs/: README.md  book.toml  build.sh
docs/src/: SUMMARY.md  introduction.md  quickstart.md
examples/: README.md  ROADMAP.md  account_deploy.rs  account_flow.rs  authwit.rs  block_building.rs  contract_call.rs  contract_update.rs  deploy_contract.rs  deploy_options.rs  event_logs.rs  fee_juice_claim.rs  fee_native.rs  fee_sponsored.rs  l1_to_l2_message.rs  l2_to_l1_message.rs  multiple_accounts_one_encryption_key.rs  node_info.rs  note_getter.rs  private_token_transfer.rs  public_storage.rs  scope_isolation.rs  simulate_profile_send.rs  two_pxes.rs  wallet_minimal.rs
examples/common/: mod.rs
fixtures/: README.md  abi_types_contract_compiled.json  amm_contract_compiled.json  auth_contract_compiled.json  auth_wit_test_contract_compiled.json  child_contract_compiled.json  child_contract_compiled.json.bak  counter_contract.json  escrow_contract.json  escrow_contract_compiled.json  event_only_contract_compiled.json  fee_juice_contract_compiled.json  fpc_contract_compiled.json  generic_proxy_contract_compiled.json  import_test_contract_compiled.json  invalid_account_contract_compiled.json  nft_contract_compiled.json  note_getter_contract_compiled.json  offchain_effect_contract_compiled.json  option_param_contract_compiled.json  parent_contract_compiled.json  pending_note_hashes_contract_compiled.json  schnorr_account_contract_compiled.json  scope_test_contract_compiled.json  sponsored_fpc_contract_compiled.json  sponsored_fpc_no_end_setup_contract_compiled.json  state_vars_contract_compiled.json  stateful_test_contract_compiled.json  static_child_contract_compiled.json  static_parent_contract_compiled.json  test_log_contract_compiled.json  token_contract.json  updatable_contract_compiled.json  updated_contract_compiled.json
src/: abi.rs  account.rs  contract.rs  deployment.rs  error.rs  events.rs  fee.rs  lib.rs  node.rs  rpc.rs  tx.rs  types.rs  wallet.rs
tests/: account.rs  contract.rs  core.rs  crypto.rs  e2e_2_pxes.rs  e2e_abi_types.rs  e2e_account_contracts.rs  e2e_authwit.rs  e2e_block_building.rs  e2e_contract_updates.rs  e2e_cross_chain_l1_to_l2.rs  e2e_cross_chain_l2_to_l1.rs  e2e_cross_chain_token_bridge_failure_cases.rs  e2e_cross_chain_token_bridge_private.rs  e2e_cross_chain_token_bridge_public.rs  e2e_deploy_contract_class_registration.rs  e2e_deploy_legacy.rs  e2e_deploy_method.rs  e2e_deploy_private_initialization.rs  e2e_double_spend.rs  e2e_escrow_contract.rs  e2e_event_logs.rs  e2e_event_only.rs  e2e_expiration_timestamp.rs  e2e_fee_account_init.rs  e2e_fee_failures.rs  e2e_fee_gas_estimation.rs  e2e_fee_juice_payments.rs  e2e_fee_private_payments.rs  e2e_fee_public_payments.rs  e2e_fee_settings.rs  e2e_fee_sponsored_payments.rs  e2e_kernelless_simulation.rs  e2e_keys.rs  e2e_multiple_accounts_1_enc_key.rs  e2e_nested_contract_importer.rs  e2e_nested_contract_manual_private_call.rs  e2e_nested_contract_manual_private_enqueue.rs  e2e_nested_contract_manual_public.rs  e2e_nft.rs  (+29 more)
tests/account/: e2e_account_contracts.rs  e2e_multiple_accounts_1_enc_key.rs
tests/common/: mod.rs
tests/contract/: e2e_authwit.rs  e2e_contract_updates.rs  e2e_deploy_contract_class_registration.rs  e2e_deploy_legacy.rs  e2e_deploy_method.rs  e2e_deploy_private_initialization.rs  e2e_escrow_contract.rs  e2e_event_logs.rs  e2e_event_only.rs  e2e_nested_contract_importer.rs  e2e_nested_contract_manual_private_call.rs  e2e_nested_contract_manual_private_enqueue.rs  e2e_nested_contract_manual_public.rs  e2e_nft.rs  e2e_option_params.rs  e2e_ordering.rs  e2e_state_vars.rs  (+11 more)
(+88 files in other folders)
