[workspace]
members = [
    "crates/core",
    "crates/rpc",
    "crates/crypto",
    "crates/node-client",
    "crates/pxe-client",
    "crates/wallet",
    "crates/contract",
    "crates/account",
    "crates/fee",
    "crates/ethereum",
]

[package]
name = "aztec-rs"
version = "0.1.1"
edition = "2021"
description = "Rust SDK for the Aztec Network"
license = "Apache-2.0"

[dependencies]
aztec-core = { path = "crates/core" }
aztec-rpc = { path = "crates/rpc" }
aztec-crypto = { path = "crates/crypto" }
aztec-node-client = { path = "crates/node-client" }
aztec-pxe-client = { path = "crates/pxe-client" }
aztec-wallet = { path = "crates/wallet" }
aztec-contract = { path = "crates/contract" }
aztec-account = { path = "crates/account" }
aztec-fee = { path = "crates/fee" }
aztec-ethereum = { path = "crates/ethereum" }

# Re-export key external dependencies so consumers don't need to add them separately
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
