[workspace]
members = [
    "crates/core",
    "crates/rpc",
    "crates/crypto",
    "crates/node-client",
    "crates/pxe-client",
    "crates/wallet",
    "crates/contract",
    "crates/account",
    "crates/fee",
    "crates/ethereum",
]

[package]
name = "aztec-rs"
version = "0.3.0"
edition = "2021"
description = "Rust SDK for the Aztec Network"
license = "Apache-2.0"

[dependencies]
aztec-core = { path = "crates/core", version = "0.3.0" }
aztec-rpc = { path = "crates/rpc", version = "0.3.0" }
aztec-crypto = { path = "crates/crypto", version = "0.3.0" }
aztec-node-client = { path = "crates/node-client", version = "0.3.0" }
aztec-pxe-client = { path = "crates/pxe-client", version = "0.3.0" }
aztec-wallet = { path = "crates/wallet", version = "0.3.0" }
aztec-contract = { path = "crates/contract", version = "0.3.0" }
aztec-account = { path = "crates/account", version = "0.3.0" }
aztec-fee = { path = "crates/fee", version = "0.3.0" }
aztec-ethereum = { path = "crates/ethereum", version = "0.3.0" }

# Re-export key external dependencies so consumers don't need to add them separately
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
