[workspace]
members = [
    "crates/core",
    "crates/rpc",
    "crates/crypto",
    "crates/node-client",
    "crates/pxe-client",
    "crates/pxe",
    "crates/wallet",
    "crates/contract",
    "crates/account",
    "crates/fee",
    "crates/ethereum",
]

[package]
name = "aztec-rs"
version = "0.5.1"
edition = "2021"
description = "Rust runtime and client workspace for the Aztec Network"
license = "Apache-2.0"
# Depends on unpublished noir pre-release via aztec-crypto/aztec-pxe
publish = false

[dependencies]
aztec-core = { path = "crates/core", version = "0.5.1" }
aztec-rpc = { path = "crates/rpc", version = "0.5.1" }
aztec-crypto = { path = "crates/crypto", version = "0.5.1" }
aztec-node-client = { path = "crates/node-client", version = "0.5.1" }
aztec-pxe-client = { path = "crates/pxe-client", version = "0.5.1" }
aztec-pxe = { path = "crates/pxe", version = "0.5.1" }
aztec-wallet = { path = "crates/wallet", version = "0.5.1" }
aztec-contract = { path = "crates/contract", version = "0.5.1" }
aztec-account = { path = "crates/account", version = "0.5.1" }
aztec-fee = { path = "crates/fee", version = "0.5.1" }
aztec-ethereum = { path = "crates/ethereum", version = "0.5.1" }

# Re-export key external dependencies so consumers don't need to add them separately
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

# Patch to resolve dependency version conflicts with noir crates
[patch.crates-io]
keccak = { git = "https://github.com/RustCrypto/sponges.git", tag = "keccak-v0.2.0-rc.0" }
# Pin noir crates to the exact commit matching compiled contract artifacts
acvm = { git = "https://github.com/noir-lang/noir.git", rev = "2db78f8894936db05c53430f364360ac9cc5c61f", package = "acvm" }
brillig_vm = { git = "https://github.com/noir-lang/noir.git", rev = "2db78f8894936db05c53430f364360ac9cc5c61f", package = "brillig_vm" }
acir = { git = "https://github.com/noir-lang/noir.git", rev = "2db78f8894936db05c53430f364360ac9cc5c61f", package = "acir" }
noirc_abi = { git = "https://github.com/noir-lang/noir.git", rev = "2db78f8894936db05c53430f364360ac9cc5c61f", package = "noirc_abi" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir.git", rev = "2db78f8894936db05c53430f364360ac9cc5c61f", package = "bn254_blackbox_solver" }
