[package]
name = "aztec-account"
version = "0.1.1"
edition = "2021"
description = "Account abstraction, AccountManager, and authorization for the Aztec Rust SDK"
license = "Apache-2.0"

[dependencies]
aztec-core = { path = "../core" }
aztec-wallet = { path = "../wallet" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
