[package]
name = "aztec-account"
version = "0.5.1"
edition = "2021"
description = "Account abstraction, AccountManager, and authorization for the Aztec Rust SDK"
license = "Apache-2.0"
# Depends on unpublished noir pre-release via aztec-crypto/aztec-pxe
publish = false

[dependencies]
aztec-core = { path = "../core", version = "0.5.1" }
aztec-contract = { path = "../contract", version = "0.5.1" }
aztec-crypto = { path = "../crypto", version = "0.5.1" }
aztec-fee = { path = "../fee", version = "0.5.1" }
aztec-wallet = { path = "../wallet", version = "0.5.1" }
aztec-pxe-client = { path = "../pxe-client", version = "0.5.1" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
