[package]
name = "aztec-contract"
version = "0.2.3"
edition = "2021"
description = "Contract interaction, deployment, and event decoding for the Aztec Rust SDK"
license = "Apache-2.0"

[dependencies]
aztec-core = { path = "../core", version = "0.2.3" }
aztec-wallet = { path = "../wallet", version = "0.2.3" }
aztec-node-client = { path = "../node-client", version = "0.2.3" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
