[package]
name = "aztec-contract"
version = "0.2.5"
edition = "2021"
description = "Contract interaction, deployment, and event decoding for the Aztec Rust SDK"
license = "Apache-2.0"

[dependencies]
aztec-core = { path = "../core", version = "0.2.5" }
aztec-wallet = { path = "../wallet", version = "0.2.5" }
aztec-node-client = { path = "../node-client", version = "0.2.5" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
