[package]
name = "aztec-core"
version = "0.5.1"
edition = "2021"
description = "Core types, traits, and ABI definitions for aztec-rs"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hex = "0.4"
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-grumpkin = "0.5"
ark-serialize = "0.5"
rand = "0.8"
taceo-poseidon2 = { version = "0.2.1", features = ["bn254"] }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
base64 = "0.22"
