[package]
name = "aztec-crypto"
version = "0.5.1"
edition = "2021"
description = "Cryptographic primitives and key derivation for aztec-rs"
license = "Apache-2.0"
# Depends on unpublished noir pre-release; publish when noir 1.0 lands on crates.io
publish = false

[dependencies]
aztec-core = { path = "../core", version = "0.5.1" }
blake2 = "0.10"
sha2 = "0.10"
bn254_blackbox_solver = { version = "1.0.0-beta.18" }
ark-grumpkin = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-bn254 = "0.5"
