[package]
name = "aztec-ethereum"
version = "0.3.0"
edition = "2021"
description = "Ethereum L1 integration and L1-L2 messaging for the Aztec Rust SDK"
license = "Apache-2.0"

[dependencies]
aztec-core = { path = "../core", version = "0.3.0" }
aztec-node-client = { path = "../node-client", version = "0.3.0" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
