[package]
name = "aztec-ethereum"
version = "0.3.2"
edition = "2021"
description = "Ethereum L1 integration and L1-L2 messaging for the Aztec Rust SDK"
license = "Apache-2.0"

[dependencies]
aztec-core = { path = "../core", version = "0.3.2" }
aztec-node-client = { path = "../node-client", version = "0.3.2" }
reqwest = { version = "0.12", features = ["json"] }
sha3 = "0.10"
hex = "0.4"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
