[package]
name = "aztec-fee"
version = "0.2.5"
edition = "2021"
description = "Fee payment strategies for the Aztec Rust SDK"
license = "Apache-2.0"

[dependencies]
aztec-core = { path = "../core", version = "0.2.5" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
