[package]
name = "aztec-fee"
version = "0.5.1"
edition = "2021"
description = "Fee payment strategies for aztec-rs"
license = "Apache-2.0"

[dependencies]
aztec-core = { path = "../core", version = "0.5.1" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
