[package]
name = "aztec-node-client"
version = "0.1.1"
edition = "2021"
description = "Aztec node HTTP client and polling helpers"
license = "Apache-2.0"

[dependencies]
aztec-core = { path = "../core" }
aztec-rpc = { path = "../rpc" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
