[package]
name = "aztec-pxe-client"
version = "0.4.0"
edition = "2021"
description = "PXE (Private eXecution Environment) client for the Aztec Rust SDK"
license = "Apache-2.0"
# Depends on unpublished noir pre-release via aztec-crypto/aztec-pxe
publish = false

[dependencies]
aztec-core = { path = "../core", version = "0.4.0" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
