[package]
name = "aztec-pxe"
version = "0.4.0"
edition = "2021"
description = "Embedded PXE (Private eXecution Environment) for the Aztec Rust SDK"
license = "Apache-2.0"

[dependencies]
aztec-core = { path = "../core", version = "0.4.0" }
aztec-crypto = { path = "../crypto", version = "0.4.0" }
aztec-node-client = { path = "../node-client", version = "0.4.0" }
aztec-pxe-client = { path = "../pxe-client", version = "0.4.0" }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
async-trait = "0.1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
tokio = { version = "1", features = ["sync", "process", "fs", "macros"] }
tracing = "0.1"

# Noir ACVM — pinned to the exact noir commit matching compiled contract artifacts
acvm = { version = "1.0.0-beta.18", git = "https://github.com/noir-lang/noir.git", rev = "2db78f8894936db05c53430f364360ac9cc5c61f", package = "acvm" }
brillig_vm = { version = "1.0.0-beta.18", git = "https://github.com/noir-lang/noir.git", rev = "2db78f8894936db05c53430f364360ac9cc5c61f", package = "brillig_vm" }
acir = { version = "1.0.0-beta.18", git = "https://github.com/noir-lang/noir.git", rev = "2db78f8894936db05c53430f364360ac9cc5c61f", package = "acir" }
noirc_abi = { version = "1.0.0-beta.18", git = "https://github.com/noir-lang/noir.git", rev = "2db78f8894936db05c53430f364360ac9cc5c61f", package = "noirc_abi" }
bn254_blackbox_solver = { version = "1.0.0-beta.18", git = "https://github.com/noir-lang/noir.git", rev = "2db78f8894936db05c53430f364360ac9cc5c61f", package = "bn254_blackbox_solver" }
flate2 = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
