[package]
name = "aztec-pxe"
version = "0.5.1"
edition = "2021"
description = "Embedded PXE (Private eXecution Environment) for the Aztec Rust SDK"
license = "Apache-2.0"
# Depends on unpublished noir pre-release; publish when noir 1.0 lands on crates.io
publish = false

[dependencies]
aztec-core = { path = "../core", version = "0.5.1" }
aztec-crypto = { path = "../crypto", version = "0.5.1" }
aztec-node-client = { path = "../node-client", version = "0.5.1" }
aztec-pxe-client = { path = "../pxe-client", version = "0.5.1" }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
async-trait = "0.1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
tokio = { version = "1", features = ["sync", "process", "fs", "macros"] }
tracing = "0.1"

# Noir ACVM — pinned to the exact noir commit matching compiled contract artifacts
# Noir ACVM — pinned to git rev via workspace [patch.crates-io]
acvm = { version = "1.0.0-beta.18" }
brillig_vm = { version = "1.0.0-beta.18" }
acir = { version = "1.0.0-beta.18" }
noirc_abi = { version = "1.0.0-beta.18" }
bn254_blackbox_solver = { version = "1.0.0-beta.18" }
flate2 = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
