[package]
name = "aztec-rpc"
version = "0.5.1"
edition = "2021"
description = "JSON-RPC transport for aztec-rs clients"
license = "Apache-2.0"

[dependencies]
aztec-core = { path = "../core", version = "0.5.1" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
