[package]
name = "aztec-wallet"
version = "0.4.0"
edition = "2021"
description = "Wallet trait, MockWallet, and supporting types for the Aztec Rust SDK"
license = "Apache-2.0"
# Depends on unpublished noir pre-release via aztec-crypto/aztec-pxe
publish = false

[dependencies]
aztec-core = { path = "../core", version = "0.4.0" }
aztec-node-client = { path = "../node-client", version = "0.4.0" }
aztec-pxe-client = { path = "../pxe-client", version = "0.4.0" }
aztec-pxe = { path = "../pxe", version = "0.4.0", optional = true }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[features]
default = ["embedded-pxe"]
embedded-pxe = ["dep:aztec-pxe"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
